--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Edit _config.yml to set your title!
-description: Algorithmic Complexity Musings ! Happy blogging... ❤
+title: Algorithmic Complexity Musings!
+description: Generative AI meets Algorithmic Complexity ! Happy blogging... ❤
 github_username: algoplexity
 
 # Email and twitter are optional:
