--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ description: Generative AI meets Algorithmic Complexity ! Happy blogging... ❤
 github_username: algoplexity
 
 # Email and twitter are optional:
-email:
-twitter_username:
+email: simplexityware@gmail.com
+twitter_username: simplexityware
 
 # Set this to true to get LaTeX math equation support
 use_math:
